# llm-minima

./: LICENSE  README.md  pyproject.toml
data/examples/: .gitignore  download-examples.py
experiments/llm/: causal-attention.ipynb  scaled-dot-attention.ipynb  self-attention.ipynb
experiments/pytorch/: pytorch-nn.ipynb
experiments/tokenization/: bpe-tokenizer.ipynb  tokenizers.ipynb
experiments/tools/: path-tools.ipynb
llm_minima/: __init__.py  main.py
